--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
         <div class="row">
             <div class="col px-1">
                 <div class="card">
-                    <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap">
+                    <a href="./detail.html">
+                        <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap" ></img>
+                    </a>
                     <div class="card-body p-1">
-                        <h5 class="card-title font-weight-bold">Card title</h5>
+                        <a href="./detail.html">
+                            <h5 class="text-dark card-title font-weight-bold">Card title</h5></a>
                         <p class="price harga_ori">Rp. 123.456</p>
                         <p class="price harga">Rp. 100.456</p>
                         <div class="text-center mt-2 btn-success rounded">
@@ -123,7 +126,11 @@
             <a href="#home" class="active">
               <i class="fas fa-home"></i> Home
             </a>
-            <a href="#news">News</a>
+            <a href="#news">
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>Keranjang
+                
+                <span class="badge badge-success">4</span>
+            </a>
             <a href="#contact">Contact</a>
           </div>
         </nav>
