--- a/cart.html
+++ b/cart.html
@@ -32,16 +32,22 @@
                 <div class="p-1">
                     <img src="https://dummyimage.com/64x64/20c73c/fff">
                 </div>
-                <div class="p-1">
+                <div class="p-1 cart-item-detail">
                     <p class="item-name-cart m-1">Kangkung Belanda</p>
-                    <div class="plus-minus input-group">
-                        <span class="btn btn-danger cart-plus"></span>
-                        <input class="total-items" type="text" name="jumlah" value="20">
-                        <span class="btn btn-success cart-minus"></span>
+                    <div class="total-cart row">
+                        <div class="col total-cart-price">
+                            <p class="mb-0"><span>Rp.</span>&nbsp<span>20000</span></p>
+                        </div>
+                        <div class="col">
+                            <div class="p-1 plus-minus">
+                                <div class="input-group">
+                                    <span class="border cart-plus">+</span>
+                                    <input class="total-items" type="text" name="jumlah" value="20">
+                                    <span class="border cart-minus">-</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="p-1">
-                    <div class="price"></div>
                 </div>
               </div>
           </li>
