--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col px-1">
+    <div class="container" id="data-beranda-preview">
+        <div class="row" id="data-beranda-preview-row">
+            <div class="col-6 px-1">
                 <div class="card">
                     <a href="./detail.html">
                         <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap" ></img>
@@ -70,40 +70,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col px-1">
-                <div class="card">
-                    <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap">
-                    <div class="card-body p-1">
-                        <h5 class="card-title font-weight-bold">Card title</h5>
-                        <p class="price harga_ori">Rp. 123.456</p>
-                        <p class="price harga">Rp. 100.456</p>
-                        <div class="text-center mt-2 btn-success rounded">
-                          <p class="m-0">Beli</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col px-1">
-                <div class="card">
-                    <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap">
-                    <div class="card-body p-1">
-                        <h5 class="card-title font-weight-bold">Card title</h5>
-                        <p class="price harga_ori">Rp. 123.456</p>
-                        <div>
-                          <p class="price harga">
-                            <span id="harga">Rp. 100.456</span>
-                            <span id="unit">/100mg</span>
-                          </p>
-                        </div>
-                        <div class="text-center mt-2 btn-success rounded">
-                          <p class="m-0">Beli</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col px-1">
+            <div class="col-6 px-1">
                 <div class="card">
                     <img class="card-img-top" src="https://dummyimage.com/300x200/000/fff" alt="Card image cap">
                     <div class="card-body p-1">
@@ -143,6 +110,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
